<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_ib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_10dp"
            android:background="@drawable/gg_fanhui" />

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/nick_activity_info"
            android:textColor="@color/white"
            android:textSize="@dimen/font_17sp" />

        <TextView
            android:id="@+id/done_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/size_20dp"
            android:gravity="center"
            android:text="@string/save_activity_info"
            android:textColor="@color/white"
            android:textSize="@dimen/font_17sp" />
    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_05dp"
        android:background="#222236" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/size_12dp"
        android:paddingRight="@dimen/size_12dp">

        <TextView
            android:id="@+id/edit_type_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/font_20sp"
            android:text="我的名字"
            android:textColor="#848388"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/edit_text_nick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:layout_marginBottom="@dimen/size_20dp"
            android:background="#141421"
            android:focusable="true"
            android:hint="修改昵称"
            android:maxLength="10"
            android:padding="@dimen/size_10dp"
            android:textColor="@color/white"
            android:textColorHint="#605d69"
            android:textSize="@dimen/font_15sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edit_text_desc"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/size_10dp"
            android:background="#141421"
            android:gravity="center_vertical|left|top"
            android:hint="这家伙什么也没留下"
            android:padding="@dimen/size_10dp"
            android:textColor="@color/white"
            android:textColorHint="#605d69"
            android:textSize="@dimen/font_15sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edit_text_wechat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10dp"
            android:background="#141421"
            android:hint="@string/bind_wechat_num"
            android:padding="@dimen/size_10dp"
            android:textColor="@color/white"
            android:textColorHint="#605d69"
            android:textSize="@dimen/font_15sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/edit_nick_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10dp"
            android:text="0/10"
            android:textColor="#605d69"
            android:textSize="12sp"
            android:visibility="gone" />

    </LinearLayout>


</LinearLayout>
